format posts in order